# poke

./: .gitignore  .gitmodules  .x-sc_bindtextdomain  .x-sc_copyright_check  .x-sc_prohibit_atoi_atof  .x-sc_prohibit_magic_number_exit  .x-sc_prohibit_path_max_allocation  .x-sc_prohibit_strcmp  .x-sc_prohibit_strncpy  .x-sc_prohibit_test_minus_ao  .x-sc_space_tab  .x-sc_trailing_blank  .x-sc_unmarked_diagnostics  AUTHORS  ChangeLog  DEPENDENCIES  DEV-NEWS  HACKING  INSTALL  Makefile.am  NEWS  POKE  README  TODO  bootstrap  bootstrap.conf  cfg.mk  configure.ac  run.in
PoK/: ChangeLog  README  pok
PoK/src/: pok-gui.tcl  pok-msg.tcl  pok-poke.tcl  pok.tcl
common/: pk-utils.c  pk-utils.h
doc/: Makefile.am  fdl.texi  gen-pvm-insns.sh  gendocs_template  learn-poke-language-in-y-minutes.pk  poke.texi  poke2texi.pk  settings-to-texi.pk
etc/: Makefile.am  git.orderfile  hacking.org  pk-mi-json-schema.json  poke-bright.css  poke-dark.css  poke-default.css  poke-gdb.scm  poke-map-mode.el  poke-mode.el  poke-ras-mode.el  poke.g4  poke.rec  pvm-wraps-static-whitelist  pvm-wraps-whitelist
etc/git-hooks/: pre-push
etc/vim/: Makefile.am
gui/: ChangeLog  Makefile.am  pk-gui.tcl  pk-main.tcl  pk-mi-msg.tcl  pk-mi.tcl  poke-gui.c  poke-main.tcl  poke-mi-msg.tcl  poke-mi.tcl  poke-widgets.tcl
lib/: Makefile.am  ios-dev-file.c  ios-dev-mem.c  ios-dev-nbd.c  ios.h  libpoke.c  libpoke.h  pk-term.c  pk-utils.c  pk-utils.h  pkl-anal.c  pkl-asm.c  pkl-asm.h  pkl-asm.pks  pkl-ast.c  pkl-ast.h  pkl-diag.c  pkl-diag.h  pkl-env.c  pkl-env.h  pkl-fold.c  pkl-gen.c  pkl-gen.h  pkl-gen.pks  pkl-insn.def  pkl-lex.l  pkl-parser.c  pkl-parser.h  pkl-pass.h  pkl-promo.c  pkl-rt.pk  pkl-tab.y  pkl-trans.c  pkl-trans.h  pkl-typify.c  pkl.c  pkl.h  pvm-alloc.c  pvm-alloc.h  pvm-env.c  (+8 more)
libpoke/: Makefile.am  ios-buffer.c  ios-buffer.h  ios-dev-file.c  ios-dev-mem.c  ios-dev-nbd.c  ios-dev-proc.c  ios-dev-stream.c  ios-dev-sub.c  ios-dev-zero.c  ios-dev.h  ios.c  ios.h  libpoke.c  libpoke.h  pk-val.c  pkl-anal.c  pkl-anal.h  pkl-asm.c  pkl-asm.h  pkl-asm.pks  pkl-ast.c  pkl-ast.h  pkl-attrs.def  pkl-compiler.h  pkl-diag.c  pkl-diag.h  pkl-env.c  pkl-env.h  pkl-fold.c  pkl-fold.h  pkl-gen-attrs.pks  pkl-gen-builtins.pks  pkl-gen.c  pkl-gen.h  pkl-gen.pks  pkl-insn.def  pkl-lex.l  pkl-ops.def  pkl-parser.c  (+30 more)
libutils/: Makefile.am  pk-utils.c  pk-utils.h
m4/: libtextstyle-hyperlink.m4  tcl.m4
man/: Makefile.am
maps/: Makefile.am  dwarf.map  elf.map  mp3.map
pickles/: Makefile.am  argp.pk  asn1-ber.pk  bmp.pk  bpf.pk  btf-dump.pk  btf-ext.pk  btf.pk  color.pk  ctf-dump.pk  ctf.pk  diff.pk  dwarf-common.pk  dwarf-expr.pk  dwarf-frame.pk  dwarf-info.pk  dwarf-pubnames.pk  dwarf-types.pk  dwarf.pk  elf-32.pk  elf-64.pk  elf-common.pk  elf.pk  id3v1.pk  id3v2.pk  ios.pk  jffs2.pk  leb128.pk  mbr.pk  mcr.pk  openpgp.pk  pktest.pk  rgb24.pk  time.pk  ustar.pk
pickles/future/: bmp.pk  bson.pk  id3v1.pk  id3v2.pk
po/: ChangeLog  POTFILES.in  poke.pot
poke/: Makefile.am  pk-cmd-def.c  pk-cmd-editor.c  pk-cmd-help.c  pk-cmd-info.c  pk-cmd-ios.c  pk-cmd-map.c  pk-cmd-misc.c  pk-cmd-set.c  pk-cmd-vm.c  pk-cmd.c  pk-cmd.h  pk-cmd.pk  pk-copy.pk  pk-def.c  pk-diff.pk  pk-dump.pk  pk-editor.c  pk-editor_1.c  pk-extract.pk  pk-help.pk  pk-help_1.c  pk-hserver.c  pk-hserver.h  pk-hserver.pk  pk-hserver_1.c  pk-info.c  pk-info.pk  pk-ios.c  pk-ios.h  pk-map-lex.l  pk-map-parser.h  pk-map-tab.y  pk-map.c  pk-map.h  pk-map.pk  pk-mi-json.c  pk-mi-json.h  pk-mi-msg.c  pk-mi-msg.def  (+20 more)
poked/: Makefile.am  README.md  pk-dump-minimal.pk  poked.c  poked.pk  usock-buf-priv.h  usock-buf.c  usock-buf.h  usock.c  usock.h
src/: Makefile.am  ios-dev-file.c  ios-dev-mem.c  ios-dev-nbd.c  ios-dev.h  ios.c  ios.h  pk-cmd.c  pk-cmd.h  pk-cmd.pk  pk-copy.pk  pk-def.c  pk-dump.pk  pk-editor.c  pk-file.c  pk-help.c  pk-hserver.c  pk-hserver.h  pk-info.c  pk-ios.c  pk-misc.c  pk-repl.c  pk-repl.h  pk-save.pk  pk-set.c  pk-term.c  pk-term.h  pk-utils.c  pk-utils.h  pk-vm.c  pkl-anal.c  pkl-asm.c  pkl-asm.h  pkl-asm.pks  pkl-ast.c  pkl-ast.h  pkl-attrs.def  pkl-env.c  pkl-env.h  pkl-fold.c  (+31 more)
testsuite/: Makefile.am
testsuite/config/: unix.exp
testsuite/lib/: poke-dg.exp  poke-pk.exp  poke.exp
testsuite/poke.argp/: argp-1.pk  argp-10.pk  argp-11.pk  argp-12.pk  argp-2.pk  argp-3.pk  argp-4.pk  argp-5.pk  argp-6.pk  argp-7.pk  argp-8.pk  argp-9.pk  argp-diag-1.pk  argp-diag-2.pk  argp-diag-3.pk  argp-diag-4.pk  argp.exp
testsuite/poke.cmd/: close-sub-1.pk  cmd.exp  copy-5.pk  dump-10.pk  dump-11.pk  dump-12.pk  dump-13.pk  dump-8.pk  dump-9.pk  extract-1.pk  file-bias-1.pk  file-bias-2.pk  file-mode.pk  file-relative.pk  maps-1.pk  maps-2.pk  maps-3.pk  maps-4.pk  maps-5.pk  maps-6.pk  maps-7.pk  maps-8.pk  maps-9.pk  maps-alien-1.pk  nbd-1.pk  save-2.pk  scrabble-1.pk  scrabble-2.pk  scrabble-3.pk  scrabble-4.pk  sdiff-1.pk  sdiff-10.pk  sdiff-11.pk  sdiff-12.pk  sdiff-2.pk  sdiff-3.pk  sdiff-4.pk  sdiff-5.pk  sdiff-6.pk  sdiff-7.pk  (+9 more)
testsuite/poke.color/: color-1.pk  color-2.pk  color-3.pk
testsuite/poke.id3v1/: id3v1-1.pk  id3v1-2.pk  id3v1-3.pk  id3v1-4.pk  id3v1-5.pk  id3v1-6.pk  id3v1-7.pk  id3v1-8.pk  id3v1-9.pk
testsuite/poke.libpoke/: Makefile.am  api.c  decls.c  foreign-iod.c  libpoke.exp  pk_equal_arr.test  pk_equal_int.test  pk_equal_off.test  pk_equal_sct.test  pk_equal_str.test  pk_equal_uint.test  pk_nequal_arr.test  pk_nequal_int.test  pk_nequal_off.test  pk_nequal_sct.test  pk_nequal_str.test  pk_nequal_uint.test  term-if.h  values.c
testsuite/poke.mi-json/: Makefile.am  mi-json.c  mi-json.exp  pk_array.json  pk_array_bounded.json  pk_array_bounded_fail.json  pk_array_bounded_offset.json  pk_array_bounded_offset_fail.json  pk_array_unbounded.json  pk_int.json  pk_int_fail.json  pk_offset.json  pk_offset_fail.json  pk_offset_uint.json  pk_offset_uint_fail.json  pk_sct.json  pk_sct_empty.json  pk_sct_empty_mapped.json  pk_sct_fail.json  pk_string.json  pk_string_fail.json  pk_uint.json  pk_uint_fail.json
utils/: Makefile.am  elfextractor  pk-bin2poke.in  pk-elfextractor  pk-elfextractor.in  pk-strings.in
(+1921 files in other folders)
