picklesdir = $(pkgdatadir)/pickles
dist_pickles_DATA = elf.pk ctf.pk ctf-dump.pk leb128.pk \
                    bpf.pk btf.pk btf-ext.pk btf-dump.pk bmp.pk \
                    color.pk rgb24.pk id3v1.pk \
                    dwarf.pk dwarf-common.pk dwarf-frame.pk dwarf-pubnames.pk \
                    dwarf-types.pk time.pk argp.pk pktest.pk mbr.pk ustar.pk \
                    mcr.pk dwarf-expr.pk dwarf-info.pk id3v2.pk jffs2.pk
