picklesdir = $(pkgdatadir)/pickles
dist_pickles_DATA = elf-common.pk elf-64.pk elf-32.pk elf.pk ctf.pk ctf-dump.pk leb128.pk \
                    bpf.pk btf.pk btf-ext.pk btf-dump.pk bmp.pk \
                    color.pk rgb24.pk id3v1.pk ios.pk \
                    dwarf.pk dwarf-common.pk dwarf-frame.pk dwarf-pubnames.pk \
                    dwarf-types.pk time.pk argp.pk pktest.pk mbr.pk ustar.pk \
                    mcr.pk dwarf-expr.pk dwarf-info.pk id3v2.pk jffs2.pk asn1-ber.pk
